# html-to-seed

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile.toml  README.md  build.sh  package.json  rustfmt.toml
.github/workflows/: build.yml
configs/: postcss.config.js  tailwind.config.js  webpack.config.js
entries/: index.html  index.ts
html-to-seed-bin/: Cargo.toml
html-to-seed-bin/src/: main.rs
html-to-seed-lib/: Cargo.toml
html-to-seed-lib/src/: attribute_map.rs  lib.rs
html-to-seed-web/: Cargo.toml  Makefile.toml  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
html-to-seed-web/public/: index.css
html-to-seed-web/src/: app.rs  lib.rs  main.rs  samples.rs
html-to-seed-web/tests/: test.rs
scripts/: postcss_rust_helpers.js
