[package]
name = "html-to-seed"
description = "Command line tool to convert from Html to Rust + Seed code."
repository = "https://github.com/phillipbaird/html-to-seed"
authors = ["Phillip Baird <phillip.baird@gmail.com>"]
categories = ["rust", "tailwindcss", "seed"]
license = "MIT"
edition = "2018"
version = "0.1.0"

[dependencies]

structopt = "^0.3.2"
html-to-seed-lib = { path = "../html-to-seed-lib" }