[package]
name = "html-to-seed-lib"
description = "Library to convert from Html to Rust + Seed code."
# repository = "https://github.com/phillipbaird/html-to-seed"
authors = ["Phillip Baird <phillip.baird@gmail.com>"]
categories = ["rust", "seed"]
license = "MIT"
edition = "2018"
version = "0.2.0"

[dependencies]

html5ever = "^0.24.1"
lazy_static = "^1.4.0"