[package]
name = "html-to-seed-web"
description = "Webapp to convert from Html to Rust + Seed code."
repository = "https://github.com/phillipbaird/html-to-seed"
authors = ["Phillip Baird <phillip.baird@gmail.com>"]
categories = ["wasm", "rust", "typescript", "tailwindcss", "seed"]
license = "MIT"
readme = "./README.md"
edition = "2018"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2.51"
seed = { git = "https://github.com/David-OConnor/seed", branch="master" }
html-to-seed-lib = { path = "../html-to-seed-lib" }

# For serialization, eg sending requests to a server. Otherwise, not required.
# serde = { version = "^1.0.97", features = ['derive'] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
# console_error_panic_hook = { version ="0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
# wee_alloc = { version = "0.4.4", optional = true }

[dependencies.web-sys]
version = "^0.3.28"
features = [
  "Document",
  "Element",
  "HtmlDocument",
  "HtmlElement",
  "Node",
  "Window",
  "CustomEvent"
]

[dev-dependencies]
wasm-bindgen-test = "^0.2.50"

[profile.release]
lto = true
opt-level = 's'
