[package]
name = "html-to-seed-web"
description = "Webapp to convert from Html to Rust + Seed code."
repository = "https://github.com/phillipbaird/html-to-seed"
authors = ["Phillip Baird <phillip.baird@gmail.com>"]
categories = ["wasm", "rust", "tailwindcss", "seed"]
license = "MIT"
readme = "./README.md"
edition = "2018"
version = "0.1.0"

[dependencies]
seed = "0.8"
html-to-seed-lib = { path = "../html-to-seed-lib" }
wasm-bindgen = "^0.2.80"